fixed entities